--- a/slides/apunte.tex
+++ b/slides/apunte.tex
@@ -124,14 +124,17 @@ El contenido se ha recopilado de diversas fuentes. Los temas relacionados con la
 \chapter{Etiquetado de Secuencias}
 \label{cap_etisec}
 \input{cap_etisec}
-%Translate this Latex book chapter of an NLP book on Sequence Labeling to Spanish. Output in Latex format. Rearrange bullet points (\items) into full paragraphs. Make sure that sentences are connected in a more fluid way as they come. Elaborate on incomplete ideas where appropriate. Add caption and center images.
 
 
- 
 
 \chapter{Redes Neuronales Convolucionales}
 \label{cap_cnn}
 \input{cap_cnn}
+
+
+%Translate this Latex book chapter of an NLP book on Convolution Neural Networks to Spanish. Output in Latex format. Rearrange bullet points (\items) into full paragraphs. Make sure that sentences are connected in a more fluid way as they come. Elaborate on incomplete ideas where appropriate. Add caption and center images.
+
+
 
 
 
